# aporia

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  main.py  plan-v2.md  pyproject.toml
docker/: run_streamlit.sh
interview_coach/: AGENTS.md  README.md  __init__.py  app.py  plan.md
interview_coach/interview_app/: __init__.py  auth.py  charts.py  config.py  db.py  db_sqlite.py  logging_setup.py  pdf_report.py  session_state.py
interview_coach/interview_app/agents/: __init__.py  cv_profiler.py  fallacy_judge.py  interview_coach.py
interview_coach/interview_app/models/: __init__.py  schemas.py
interview_coach/interview_app/services/: __init__.py  cv_parser.py  fallacy_formatting.py  llm_structured.py  prompt_catalog.py  safety.py  skill_coverage.py  uploads.py
interview_coach/interview_app/ui/: __init__.py  components.py  layout.py
interview_coach/tests/: test_analytics.py  test_cv_parser.py  test_db.py  test_pdf_report.py  test_prompt_catalog.py  test_safety.py  test_schemas.py  test_skill_coverage.py  test_state_machine.py
mock-interviews/scenaro1-chef-in-berlin/: sc1_candidate_1.txt  sc1_flawed_answers.txt  sc1_jd.txt
